--- a/notes-project/package.json
+++ b/notes-project/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://amichy-dahan.github.io/QuickNotes-Project/notes-project",
+  "homepage": "http://amichy-dahan.github.io/QuickNotes-Project",
   "name": "notes-project",
   "private": true,
   "version": "0.0.0",
